apps/pelican/service-dragonfly.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: pelican
  name: dragonfly
  labels:
    app.kubernetes.io/name: dragonfly
spec:
  ports:
    - name: dragonfly
      port: 6379
      protocol: TCP
      targetPort: dragonfly
  selector:
    app.kubernetes.io/name: dragonfly
  type: ClusterIP
