apps/pelican/httproute-pelican.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: pelican
  name: pelican
spec:
  parentRefs:
    - namespace: gateway
      name: jdmarble-net
  hostnames:
    - "pelican.jdmarble.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pelican
          port: 80
